--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,136 +5,136 @@
     tools:context=".MainActivity">
 
     <data>
-
-        <import type="android.view.View" />
-
+        <import type="android.view.View"/>
         <variable
             name="result"
             type="com.example.test.DetectionResult" />
+        <variable
+            name="result2"
+            type="com.example.test.DetectionResult" />
+
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="H,9:16"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+        <SurfaceView
+            android:id="@+id/surface"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-            <SurfaceView
-                android:id="@+id/surface"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+        <View
+            android:id="@+id/scan"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="21dp"
+            android:layout_marginTop="136dp"
+            android:layout_marginRight="21dp"
+            android:layout_marginBottom="136dp"
+            android:visibility="@{result.hasFace ? View.GONE : View.VISIBLE}"
+            android:background="@drawable/scanning" />
 
-            <View
-                android:id="@+id/scan"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="21dp"
-                android:layout_marginTop="136dp"
-                android:layout_marginRight="21dp"
-                android:layout_marginBottom="136dp"
-                android:background="@drawable/scanning"
-                android:visibility="@{result.hasFace ? View.GONE : View.VISIBLE}" />
+        <com.example.test.CoverView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:horizontalPadding="21dp"
+            app:verticalPadding="136dp"
+            app:backgroundColor="@color/cover_background"/>
 
-            <com.example.test.CoverView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:backgroundColor="@color/cover_background"
-                app:horizontalPadding="21dp"
-                app:verticalPadding="136dp" />
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/frame"
+            android:keepScreenOn="true"
+            android:layout_marginLeft="21dp"
+            android:layout_marginTop="136dp"
+            android:layout_marginRight="21dp"
+            android:layout_marginBottom="136dp" />
 
-            <View
+
+        <LinearLayout
+            android:layout_width="165dp"
+            android:layout_height="31dp"
+            android:orientation="horizontal"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="80dp"
+            android:background="@drawable/time_bg"
+            android:visibility="@{result.hasFace ? View.VISIBLE : View.GONE}"
+            android:gravity="center">
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="21dp"
-                android:layout_marginTop="136dp"
-                android:layout_marginRight="21dp"
-                android:layout_marginBottom="136dp"
-                android:background="@drawable/frame"
-                android:keepScreenOn="true" />
+                android:textSize="17sp"
+                android:drawablePadding="10dp"
+                android:drawableStart="@drawable/clock"
+                android:text='@{String.valueOf(result.time) + "ms"}'
+                android:textColor="#ffffff"/>
+
+        </LinearLayout>
+
+        <com.example.test.RectView
+            android:id="@+id/rectView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:color="@{result.confidence == 0 ?@color/loading_face_color:result.confidence >= result.threshold ? @color/real_face_color : @color/fake_face_color}"
+            app:confidence="@{result.confidence}"
+            app:lineLength="40dp"
+            app:radius="3dp"
+            app:textPadding="6dp"
+            app:textSize="15sp"
+            app:x1="@{result.left}"
+            app:x2="@{result.right}"
+            app:y1="@{result.top}"
+            app:y2="@{result.bottom}" />
+
+        <com.example.test.RectView
+            android:id="@+id/rectView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:color="@{result2.confidence == 0 ?@color/loading_face_color: result.confidence >= result.threshold ? @color/real_face_color : @color/fake_face_color}"
+            app:confidence="@{result2.confidence}"
+            app:lineLength="40dp"
+            app:radius="3dp"
+            app:textPadding="6dp"
+            app:textSize="15sp"
+            app:x1="@{result2.left}"
+            app:x2="@{result2.right}"
+            app:y1="@{result2.top}"
+            app:y2="@{result2.bottom}" />
 
 
-            <LinearLayout
-                android:layout_width="165dp"
-                android:layout_height="31dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="80dp"
-                android:background="@drawable/time_bg"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:visibility="@{result.hasFace ? View.VISIBLE : View.GONE}">
+        <LinearLayout
+            android:layout_width="142dp"
+            android:layout_height="43dp"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="72dp"
+            android:visibility="@{result.hasFace ? View.VISIBLE : View.GONE}"
+            android:background="@{result.confidence == 0 ?@drawable/result_loading_face_shape: result.confidence >= result.threshold ? @drawable/result_real_face_shape : @drawable/result_fake_face_shape}"
+            android:gravity="center">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/clock"
-                    android:drawablePadding="10dp"
-                    android:text='@{String.valueOf(result.time) + "ms"}'
-                    android:textColor="#ffffff"
-                    android:textSize="17sp" />
-
-            </LinearLayout>
-
-            <com.example.test.RectView
-                android:id="@+id/rectView"
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:color="@{result.confidence >= result.threshold ? @color/real_face_color : @color/fake_face_color}"
-                app:confidence="@{result.confidence}"
-                app:lineLength="40dp"
-                app:radius="3dp"
-                app:textPadding="6dp"
-                app:textSize="15sp"
-                app:x1="@{result.left}"
-                app:x2="@{result.right}"
-                app:y1="@{result.top}"
-                app:y2="@{result.bottom}" />
+                android:textSize="20sp"
+                android:drawableStart="@{result.confidence == 0 ? @drawable/clock :result.confidence >= result.threshold ? @drawable/success_icon : @drawable/fail_icon}"
 
-            <LinearLayout
-                android:layout_width="142dp"
-                android:layout_height="43dp"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="72dp"
-                android:background="@{result.confidence >= result.threshold ? @drawable/result_real_face_shape : @drawable/result_fake_face_shape}"
-                android:gravity="center"
-                android:visibility="@{result.hasFace ? View.VISIBLE : View.GONE}">
+                android:drawablePadding="20dp"
+                android:text='@{result.confidence == 0 ? @string/loading: result.confidence >= result.threshold ? @string/real_face : @string/fake_face}'
+                android:textColor="@{result.confidence == 0 ?@color/loading_face_color: result.confidence >= result.threshold ? @color/real_face_color : @color/fake_face_color}"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:drawableStart="@{result.confidence >= result.threshold ? @drawable/success_icon : @drawable/fail_icon}"
-                    android:drawablePadding="20dp"
-                    android:text='@{result.confidence >= result.threshold ? @string/real_face : @string/fake_face}'
-                    android:textColor="@{result.confidence >= result.threshold ? @color/real_face_color : @color/fake_face_color}"
-                    android:textSize="20sp" />
+        </LinearLayout>
 
-            </LinearLayout>
 
-            <View
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginEnd="12dp"
-                android:layout_marginBottom="12dp"
-                android:background="@drawable/logo" />
 
-            <ImageButton
-                android:layout_width="20dp"
-                android:layout_height="18dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="34dp"
-                android:layout_marginEnd="20dp"
-                android:src="@drawable/settings" />
-
-        </RelativeLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageButton
+            android:layout_width="20dp"
+            android:layout_height="18dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="34dp"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/settings"/>
+    </RelativeLayout>
 </layout>
