--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -161,5 +161,18 @@
             android:layout_marginTop="34dp"
             android:layout_marginEnd="20dp"
             android:src="@drawable/settings"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="OK"
+            android:textSize="70dp"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="150dp"
+            android:visibility="@{result.confidence == 0.9999F ? View.VISIBLE : View.GONE}"
+            android:id="@+id/txt_ok"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/real_face_color"/>
     </RelativeLayout>
 </layout>
