--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -150,12 +150,13 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:src="@drawable/ic_save" />
+
             <ImageView
                 android:id="@+id/btn_dwonload"
-                android:visibility="@{viewModel.isSaving() ? View.VISIBLE : View.GONE}"
-                android:layout_width="60dp"
+                android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:src="@drawable/ic_download" />
+                android:src="@drawable/ic_download"
+                android:visibility="@{viewModel.isSaving() ? View.VISIBLE : View.GONE}" />
         </RelativeLayout>
 
 
