Update view text blur

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,9 @@
         <variable
             name="viewModel"
             type="com.example.test.CameraViewModel" />
+        <variable
+            name="engineWrapper"
+            type="com.example.test.EngineWrapper" />
     </data>
 
     <RelativeLayout
@@ -181,5 +184,25 @@
             android:gravity="center"
             android:textStyle="bold"
             android:textColor="@color/real_face_color"/>
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/real_face_color"
+            android:visibility="@{engineWrapper.blurResult ? View.VISIBLE : View.GONE}"
+            android:text="Not blur detector"/>
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/real_face_color"
+            android:visibility="@{engineWrapper.blurResult ? View.GONE : View.VISIBLE}"
+            android:text="Blur detector"/>
     </RelativeLayout>
 </layout>
