--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -184,25 +184,34 @@
             android:gravity="center"
             android:textStyle="bold"
             android:textColor="@color/real_face_color"/>
-        <TextView
-            android:layout_width="200dp"
-            android:layout_height="40dp"
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:textAlignment="center"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:textColor="@color/real_face_color"
-            android:visibility="@{engineWrapper.blurResult ? View.VISIBLE : View.GONE}"
-            android:text="Not blur detector"/>
-        <TextView
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_centerHorizontal="true"
-            android:textAlignment="center"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:textColor="@color/real_face_color"
-            android:visibility="@{engineWrapper.blurResult ? View.GONE : View.VISIBLE}"
-            android:text="Blur detector"/>
+            android:visibility="@{com.example.test.Common.isTrial ? View.VISIBLE : View.GONE}">
+
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/real_face_color"
+                android:visibility="@{engineWrapper.blurResult ? View.VISIBLE : View.GONE}"
+                android:text="Not blur detector"/>
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/real_face_color"
+                android:visibility="@{engineWrapper.blurResult ? View.GONE : View.VISIBLE}"
+                android:text="Blur detector"/>
+
+        </RelativeLayout>
+
     </RelativeLayout>
 </layout>
